--- a/common/foundation/scss/mixins/connotation/_config.scss
+++ b/common/foundation/scss/mixins/connotation/_config.scss
@@ -3,3 +3,6 @@ $default: false !default;
 $shades: () !default;
 $connotations-set: () !default;
 $selector: '' !default;
+
+$connotation-variable: '' !default;
+$on-connotation-variable: '' !default;
