--- a/common/foundation/scss/mixins/connotation/_index.scss
+++ b/common/foundation/scss/mixins/connotation/_index.scss
@@ -3,6 +3,7 @@
 $base: true !default;
 $default: false !default;
 $shades: () !default;
+$decoratives: () !default;
 $connotations-set: primary cta success alert warning info announcement !default;
 $selector: ':host(#{variables.$compound-placeholder})' !default;
 $connotation-variable: '' !default;
@@ -12,6 +13,7 @@ $on-connotation-variable: '' !default;
 	$base: $base,
 	$default: $default,
 	$shades: $shades,
+	$decoratives: $decoratives,
 	$connotations-set: $connotations-set,
 	$selector: $selector,
 	$connotation-variable: variables.$vvd-color-connotation,
