--- a/common/foundation/scss/mixins/connotation/_config.scss
+++ b/common/foundation/scss/mixins/connotation/_config.scss
@@ -1,6 +1,7 @@
 $base: true !default;
 $default: false !default;
 $shades: () !default;
+$decoratives: () !default;
 $connotations-set: () !default;
 $selector: '' !default;
 
