--- a/common/foundation/scss/mixins/connotation/_mixins.scss
+++ b/common/foundation/scss/mixins/connotation/_mixins.scss
@@ -1,36 +1,65 @@
+@use 'sass:map';
 @use '../../functions';
-@use 'functions' as connotation-functions;
+@use 'functions' as local-functions;
 @use 'config';
 @use 'variables';
 
-@mixin parse-connotation-base($connotation) {
-	#{config.$connotation-variable}: var(#{variables.$vvd-color}-#{$connotation});
-	#{config.$on-connotation-variable}: var(#{variables.$vvd-color-on}-#{$connotation});
+@mixin connotation-base($type) {
+	#{config.$connotation-variable}: var(#{variables.$vvd-color}-#{$type});
+	#{config.$on-connotation-variable}: var(#{variables.$vvd-color-on}-#{$type});
 }
 
-@mixin parse-connotation-shade($name, $value) {
-	#{config.$connotation-variable}-#{$name}: var(#{variables.$vvd-color}-#{$value});
+@mixin connotation-shades($mapping) {
+	$shades: functions.pick-map(config.$shades, $mapping);
+	@each $name, $value in $shades {
+		#{config.$connotation-variable}-#{$name}: var(#{$value});
+	}
 }
 
-@mixin connotation {
-	@each $connotation, $mapping in functions.pick-map(config.$connotations-set, variables.$connotations-mapping) {
-		$compound: '[connotation="#{$connotation}" i]';
+@mixin connotation-decorative($mapping) {
+	$start: map.get($mapping, start);
+	$end: map.get($mapping, end);
+	#{config.$connotation-variable}: local-functions.connotation-decorative-gradient($start, $end);
+}
+
+@mixin selectors($types...) {
+	@each $type in $types {
+		$compound: '[connotation="#{$type}" i]';
 
 		$local-selector: functions.get-local-selector(config.$selector, variables.$compound-placeholder, $compound);
 
-		@if config.$default == $connotation {
-			$default-selector: connotation-functions.connotations-default-selector(config.$default);
+		$all-connotation-types: map.keys(
+			map.merge(
+				functions.pick-map(config.$decoratives, variables.$connotation-mapping-decoratives),
+				functions.pick-map(config.$connotations-set, variables.$connotation-mapping)
+			)
+		);
+
+		@if $type == config.$default {
+			$default-compound-selector: local-functions.connotation-default-compound-selector(config.$default, $all-connotation-types);
+			$default-selector: functions.get-local-selector(config.$selector, variables.$compound-placeholder, $default-compound-selector);
 			$local-selector: $local-selector,	$default-selector;
 		}
 
 		#{$local-selector} {
-			@if config.$base {
-				@include parse-connotation-base($connotation);
-			}
-
-			@each $name, $value in functions.pick-map(config.$shades, $mapping) {
-				@include parse-connotation-shade($name, $value);
-			}
+			@content($type);
 		}
+	}
+}
+
+
+@mixin connotation {
+	$mapping-shades: functions.pick-map(config.$connotations-set, variables.$connotation-mapping);
+	$mapping-decoratives: functions.pick-map(config.$decoratives, variables.$connotation-mapping-decoratives);
+	
+	$all-connotation-types: map.keys(map.merge($mapping-shades, $mapping-decoratives));
+	
+	@include selectors(map.keys($mapping-shades)...) using ($connotation-type) {
+		@include connotation-base($connotation-type);
+		@include connotation-shades(map.get($mapping-shades, $connotation-type));
+	}
+
+	@include selectors(map.keys($mapping-decoratives)...) using ($connotation-type) {
+		@include connotation-decorative(map.get($mapping-decoratives, $connotation-type));
 	}
 }
