--- a/common/foundation/scss/mixins/connotation/_variables.scss
+++ b/common/foundation/scss/mixins/connotation/_variables.scss
@@ -1,3 +1,5 @@
+@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
+
 $vvd-color: --vvd-color;
 $vvd-color-on: #{$vvd-color}-on;
 $vvd-color-connotation: #{$vvd-color}-connotation;
@@ -5,13 +7,41 @@ $vvd-color-on-connotation: #{$vvd-color}-on-connotation;
 
 $compound-placeholder: '[compound]'; // will be replaced by actual compound
 
-$connotations-mapping: (
+$connotation-mapping: (
 	// should map to colors e.g. purple-60
-	primary: (contrast: neutral-90, soft: neutral-20, accent: neutral-30),
-	cta: (contrast: cta-90, soft: cta-20, accent: cta-60),
-	success: (contrast: success-90, soft: success-20, accent: success-60),
-	alert: (contrast: alert-90, soft: alert-20, accent: alert-60),
-	warning: (contrast: warning-90, soft: warning-20, accent: warning-60),
-	info: (contrast: info-90, soft: info-20, accent: info-60),
-	announcement: (contrast: announcement-90, soft: announcement-20, accent: announcement-60),
+	primary: (
+		contrast: scheme-variables.$vvd-color-neutral-90,
+		soft: scheme-variables.$vvd-color-neutral-20,
+	),
+	cta: (
+		contrast: scheme-variables.$vvd-color-cta-90,
+		soft: scheme-variables.$vvd-color-cta-20,
+	),
+	success: (
+		contrast: scheme-variables.$vvd-color-success-90,
+		soft: scheme-variables.$vvd-color-success-20,
+	),
+	alert: (
+		contrast: scheme-variables.$vvd-color-alert-90,
+		soft: scheme-variables.$vvd-color-alert-20,
+	),
+	warning: (
+		contrast: scheme-variables.$vvd-color-warning-90,
+		soft: scheme-variables.$vvd-color-warning-20,
+	),
+	info: (
+		contrast: scheme-variables.$vvd-color-info-90,
+		soft: scheme-variables.$vvd-color-info-20,
+	),
+	announcement: (
+		contrast: scheme-variables.$vvd-color-announcement-90,
+		soft: scheme-variables.$vvd-color-announcement-20,
+	),
+);
+
+$connotation-mapping-decoratives: (
+	pacific: (
+		start: var(#{scheme-variables.$vvd-color-info-30}),
+		end: var(#{scheme-variables.$vvd-color-cta-70})
+	),
 );
