--- a/components/linear-progress/src/vwc-linear-progress.scss
+++ b/components/linear-progress/src/vwc-linear-progress.scss
@@ -1,19 +1,17 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
+@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation with(
 	$connotations-set: primary cta success alert,
-	$connotations-decorative-set: pacific
+	$default: primary,
+	$decoratives: (pacific)
 );
 
 $block-size: 6px;
 $shape-variable: --vvd-linear-progress-shape;
 
-@include color-connotation.connotations-shades;
-@include color-connotation.connotations-main;
-@include color-connotation.connotations-main-default(primary);
-@include color-connotation.connotations-decorative;
+@include connotation.connotation;
 
 :host {
-	--mdc-theme-primary: var(#{color-connotation.$vvd-color-connotation});
+	--mdc-theme-primary: var(#{connotation.$vvd-color-connotation});
 	--mdc-linear-progress-buffer-color: var(#{scheme-variables.$vvd-color-neutral-30});
 	--mdc-linear-progress-buffering-dots-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' enable-background='new 0 0 5 2' xml:space='preserve' viewBox='0 0 5 2' preserveAspectRatio='none slice'%3E%3Ccircle cx='1' cy='1' r='1' fill='%23616266'/%3E%3C/svg%3E");
 	#{$shape-variable}: 10px;
