--- a/components/icon/src/partials/_vwc-icon-connotation.scss
+++ b/components/icon/src/partials/_vwc-icon-connotation.scss
@@ -1,7 +1,6 @@
 @use 'vwc-icon-variables' as icon-variables;
 @use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation with(
-	$connotations-set: primary cta announcement success alert info,
-	$connotation-variable: #{icon-variables.$icon-color-variable-name},
+	$connotations-set: primary cta announcement success alert info
 );
 
 @include connotation.connotation;
