feat(vwc-side-drawer): add dismissible support (#1025)
* feat(vwc-side-drawer): 1st draft

* story added

* story added

* semi-transparent content model

* alternate scheme

* alternate

* devider check

* working example

* this will break

* this will not break

* slot="navigation"

* margin list

* side drawer bigger inline size

* side drawer position

* appContent inlined

* documentation, header, image

* vvd-umbrella under devDependencies

* @prop

* readme

* Update package.json

* Update package.json

* Update package.json

* Update package.json

* Update package.json

* add border and shadow to side drawer

* activated

* style

* Extension panel should not be activated

* wider side drawer

* slots documentation

* restore yarn.lock

* refer correct tokens

* refactor

* declartiveness

* correct module import

* ESlint

* refactor names

* update readme

* dismissible

* aside container- display flex

* absolute default true

* fix bugs

* add tests

* fix test

* moved keydown listener to document

* swtich cover to svg

* esc on document instead of on side drawer

* update ui test

* ui test screenshot

Co-authored-by: yinonov <yinon@hotmail.com>
Co-authored-by: tveinfeld <67224311+tveinfeld@users.noreply.github.com>

--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -48,6 +48,30 @@ $min-width: 280px;
 			transition: transform 0.5s linear;
 		}
 	}
+
+	&.vvd-side-drawer--dismissible {
+		background-color: var(#{scheme-variables.$vvd-color-canvas});
+		@media screen and (prefers-reduced-motion: reduce) {
+			&.vvd-side-drawer--open {
+				transform: translateX(0%);
+				transition: none;
+			}
+		}
+
+		&.vvd-side-drawer--open {
+			transform: translateX(0%);
+			transition: transform 0.5s linear;
+		}@media screen and (prefers-reduced-motion: reduce) {
+			&:not(.vvd-side-drawer--open) {
+				transform: translateX(-100%);
+				transition: none;
+			}
+		}
+		&:not(.vvd-side-drawer--open) {
+			transform: translateX(-100%);
+			transition: transform 0.5s linear;
+		}
+	}
 }
 
 .vvd-side-drawer--top-bar {
@@ -75,6 +99,11 @@ $min-width: 280px;
 	&:not(.vvd-side-drawer--absolute) {
 		position: fixed;
 	}
+}
+
+.aside-container {
+	display: flex;
+	&:not(&--open) {width: 0;}
 }
 
 .vvd-side-drawer--scrim {
