no need to forward config

--- a/common/foundation/scss/mixins/connotation/_index.scss
+++ b/common/foundation/scss/mixins/connotation/_index.scss
@@ -7,7 +7,7 @@ $decoratives: () !default;
 $connotations-set: primary cta success alert warning info announcement !default;
 $selector: ':host(#{variables.$compound-placeholder})' !default;
 
-@forward 'config' with (
+@use 'config' with (
 	$base: $base,
 	$default: $default,
 	$shades: $shades,
