refactor(vvd-foundation): harden fallback style of connotation (#1027)
* refactor(vvd-foundation): harden fallback style of connotation

* no need of value

* fixed compound

* refactoring connotation

* vwc-text pass

* badge & text updated

* note, snackbar, switch

* banner, button

* circular-progress, chip

* chip, icon-button

* irrelevant chip, list-item

* context

* refactoring

* typos

* updates

* update

* snackbar ui snapshot

* remove customizable variable

* no need to forward config

* resolved reviews

Co-authored-by: Yonatan Kra <yonatan.kra@vonage.com>

--- a/components/circular-progress/src/vwc-circular-progress.scss
+++ b/components/circular-progress/src/vwc-circular-progress.scss
@@ -1,11 +1,12 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
-	$connotations-set: primary cta success alert
+@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation with(
+	$connotations-set: primary cta success alert,
+	$default: primary
 );
 
-@include color-connotation.connotations-main;
-@include color-connotation.connotations-main-default(primary);
+
+@include connotation.connotation;
 
 :host {
-	--mdc-theme-primary: var(#{color-connotation.$vvd-color-connotation});
+	--mdc-theme-primary: var(#{connotation.$vvd-color-connotation});
 }
