--- a/components/icon/src/partials/_vwc-icon-connotation.scss
+++ b/components/icon/src/partials/_vwc-icon-connotation.scss
@@ -1,11 +1,9 @@
 @use 'vwc-icon-variables' as icon-variables;
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation' as color-connotation with (
-	$connotations-set: primary cta announcement success alert info,
-	$connotation-variable: #{icon-variables.$icon-color-variable-name},
-	// $on-connotation-variable: #{$icon-color-on-connotation}
+@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation with(
+	$connotations-set: primary cta announcement success alert info
 );
 
-@include color-connotation.connotations-main;
+@include connotation.connotation;
 
 :host {
 	color: var(#{icon-variables.$icon-color-variable-name}, currentColor);
