--- a/common/foundation/scss/mixins/connotation/_config.scss
+++ b/common/foundation/scss/mixins/connotation/_config.scss
@@ -1,6 +1,8 @@
+@use 'variables';
+
 $base: true !default;
 $default: false !default;
 $shades: () !default;
 $decoratives: () !default;
-$connotations-set: () !default;
-$selector: '' !default;
+$connotations-set: primary cta success alert warning info announcement !default;
+$selector: ':host(#{variables.$compound-placeholder})' !default;
