--- a/components/button/src/vwc-button.scss
+++ b/components/button/src/vwc-button.scss
@@ -4,10 +4,11 @@
 @use '@vonage/vwc-icon/src/partials/vwc-icon-variables' as icon-variables;
 @use '@vonage/vvd-style-coupling/scss/vvd-formfield' as vvd-formfield;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
-@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation with(
+@use '@vonage/vvd-foundation/scss/mixins/connotation/config'  with(
 	$connotations-set: primary cta success alert info announcement,
 	$default: primary
 );
+@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with(
 	$variable-name: --vvd-button-shape
 );
@@ -30,8 +31,6 @@
 
 @include layout-mixins.layout();
 @include layout-mixins.layout-default(ghost);
-
-@include connotation.connotation;
 
 
 :host {
