--- a/components/badge/src/vwc-badge.scss
+++ b/components/badge/src/vwc-badge.scss
@@ -4,11 +4,12 @@ $namespace-shape: #{$namespace}-shape;
 
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-typography/scss/typography' as typography;
-@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation with(
+@use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
 	$connotations-set: primary cta success alert warning info,
 	$shades: (soft, contrast),
 	$default: primary
 );
+@use '@vonage/vvd-foundation/scss/mixins/connotation';
 
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with (
 	$variable-name: #{$namespace-shape}
@@ -20,7 +21,6 @@ $namespace-shape: #{$namespace}-shape;
 
 $vvd-badge--block-size: --#{$namespace}--block-size;
 
-@include connotation.connotation;
 
 @include shape-mixins.shape(
 	$shapes: (
