--- a/components/circular-progress/src/vwc-circular-progress.scss
+++ b/components/circular-progress/src/vwc-circular-progress.scss
@@ -1,11 +1,10 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
-@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation with(
+@use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
 	$connotations-set: primary cta success alert,
 	$default: primary
 );
+@use '@vonage/vvd-foundation/scss/mixins/connotation';
 
-
-@include connotation.connotation;
 
 :host {
 	--mdc-theme-primary: var(#{connotation.$vvd-color-connotation});
