--- a/components/icon/src/partials/_vwc-icon-connotation.scss
+++ b/components/icon/src/partials/_vwc-icon-connotation.scss
@@ -1,9 +1,9 @@
 @use 'vwc-icon-variables' as icon-variables;
-@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation with(
+@use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
 	$connotations-set: primary cta announcement success alert info
 );
+@use '@vonage/vvd-foundation/scss/mixins/connotation';
 
-@include connotation.connotation;
 
 :host {
 	color: var(#{icon-variables.$icon-color-variable-name}, currentColor);
