--- a/components/note/src/vwc-note.scss
+++ b/components/note/src/vwc-note.scss
@@ -1,13 +1,13 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 @use '@vonage/vvd-typography/scss/typography';
-@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation with(
+@use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
 	$connotations-set: success alert warning info announcement,
 	$default: announcement
 );
+@use '@vonage/vvd-foundation/scss/mixins/connotation';
+
 
 $border-value: 8px solid var(#{connotation.$vvd-color-connotation});
-
-@include connotation.connotation;
 
 
 :host {
