--- a/components/text/src/vwc-text.scss
+++ b/components/text/src/vwc-text.scss
@@ -2,12 +2,12 @@ $vwc-text--color: --vwc-text--color;
 
 @use '@vonage/vvd-typography/scss/typography' as typography;
 @use '@vonage/vvd-design-tokens/build/scss/typography-variables/web' as typography-scale;
-@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation with(
+@use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
 	$connotations-set: primary cta announcement info success alert,
 	$default: primary
 );
+@use '@vonage/vvd-foundation/scss/mixins/connotation';
 
-@include connotation.connotation;
 
 :host {
 	--vwc-text--color: var(#{connotation.$vvd-color-connotation});
