--- a/components/banner/src/vwc-banner.scss
+++ b/components/banner/src/vwc-banner.scss
@@ -1,13 +1,13 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-foundation/scss/variable-names/font-variable-names' as font-var-names;
-@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation with(
-	$connotations-set: success info alert announcement warning,
-	$default: info
-);
 @use '@vonage/vvd-typography/scss/typography';
 @use './vwc-banner-variables.scss' as banner-variables;
 
-@include connotation.connotation;
+@use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
+	$connotations-set: success info alert announcement warning,
+	$default: info
+);
+@use '@vonage/vvd-foundation/scss/mixins/connotation';
 
 
 :host {
