--- a/components/switch/src/vwc-switch.scss
+++ b/components/switch/src/vwc-switch.scss
@@ -1,11 +1,10 @@
 @use 'sass:selector';
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
-@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation with(
+@use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
 	$connotations-set: primary cta success alert,
 	$default: primary
 );
-
-@include connotation.connotation;
+@use '@vonage/vvd-foundation/scss/mixins/connotation';
 
 
 // sizing parts only
