rename chips to tags, ui-tests

--- a/components/tags/src/partials/_vwc-tag-variables.scss
+++ b/components/tags/src/partials/_vwc-tag-variables.scss
@@ -1,4 +1,4 @@
-$namespace: --vvd-chip;
+$namespace: --vvd-tag;
 $namespace-layout: #{$namespace}--layout;
 $namespace-shape: #{$namespace}--shape;
 $namespace-block-size: #{$namespace}--block-size;
