--- a/common/foundation/scss/functions/_index.scss
+++ b/common/foundation/scss/functions/_index.scss
@@ -1,2 +1,2 @@
 @forward 'pick' show pick-list, pick-map;
-@forward 'misc' show get-local-selector;
+@forward 'misc' show get-local-selector, get-attribute-rule-out-compound-selector;
