--- a/components/badge/src/vwc-badge.scss
+++ b/components/badge/src/vwc-badge.scss
@@ -1,5 +1,4 @@
 $namespace: --vvd-badge;
-$namespace-layout: #{$namespace}-layout;
 $namespace-shape: #{$namespace}-shape;
 
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
@@ -17,9 +16,9 @@ $namespace-shape: #{$namespace}-shape;
 @use '@vonage/vvd-foundation/scss/mixins/layout/config' with (
 	$layout-set: filled outlined soft,
 	$default: filled,
-	$selector: ':host(#{layout-variables.$compound-placeholder})'
+	$selector: ':host(#{layout-variables.$compound-placeholder}) .vwc-badge'
 );
-@use '@vonage/vvd-foundation/scss/mixins/layout';
+@use '@vonage/vvd-foundation/scss/mixins/layout' as layout;
 
 $vvd-badge--block-size: --#{$namespace}--block-size;
 
@@ -49,10 +48,10 @@ $vvd-badge--block-size: --#{$namespace}--block-size;
 	@include typography.typography-cat-shorthand('caption-bold');
 	display: inline-block;
 	padding: 0 10px;
-	border: var(#{$namespace-layout}--outline);
-	background-color: var(#{$namespace-layout}--fill);
+	border: var(#{layout.$vvd-layout--outline});
+	background-color: var(#{layout.$vvd-layout--fill});
 	border-radius: var(#{$namespace-shape});
-	color: var(#{$namespace-layout}--text);
+	color: var(#{layout.$vvd-layout--text});
 	line-height: var(#{$vvd-badge--block-size});
 
 	:host([dense]) & {
